changes + bug fixes